themes/CPR/style.css
/*
Theme Name:   	CAN PEP REY
Author:       	Fred Cave
Author URI:		http://www.fredcave.com
*/

#wpadminbar {
    display: none !important;
}

/* BACKEND */

#visible_col {
    min-width: 200px;
} 

/* TMP */

.test {
    border: 1px solid gray;
    margin-bottom: 48px;
    margin-left: 15%;
    line-height: 1.4;
}

#test_1 {
    margin-top: 24px;
    width: 60%;
}

#test_2 {
    width: 40%;    
}

#test_3 {
    width: 30%;      
}

#test_4 {
    width: 15%;     
}

#test_5 {
    width: 15%;     
}

.last_word {
    margin-right: -4px;
}

/************************************************
    CSS RESET
************************************************/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; } /* HTML5 display-role reset for older browsers */ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block; } body {line-height: 1; } ol, ul {list-style: none; } blockquote, q {quotes: none; } blockquote:before, blockquote:after, q:before, q:after {content: ''; content: none; } table {border-collapse: collapse; border-spacing: 0; }

/************************************************
    FONTS
************************************************/

@font-face {
    font-family: 'VREGULAR';
    src: url('fonts/vonnes-2-webfont.eot');
    src: url('fonts/vonnes-2-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/vonnes-2-webfont.woff2') format('woff2'),
         url('fonts/vonnes-2-webfont.woff') format('woff'),
         url('fonts/vonnes-2-webfont.ttf') format('truetype'),
         url('fonts/vonnes-2-webfont.svg#vonnesbook') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'VBLACK';
    src: url('fonts/vonnes-black_1-webfont.eot');
    src: url('fonts/vonnes-black_1-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/vonnes-black_1-webfont.woff2') format('woff2'),
         url('fonts/vonnes-black_1-webfont.woff') format('woff'),
         url('fonts/vonnes-black_1-webfont.ttf') format('truetype'),
         url('fonts/vonnes-black_1-webfont.svg#vonnesregular') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'CPR';
    src: url('fonts/cprt-webfont.eot');
    src: url('fonts/cprt-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/cprt-webfont.woff2') format('woff2'),
         url('fonts/cprt-webfont.woff') format('woff'),
         url('fonts/cprt-webfont.ttf') format('truetype'),
         url('fonts/cprt-webfont.svg#cprregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

/************************************************
    GENERAL
************************************************/

html, body {
    width: 100%;
    height: 100%;
    top: 0;
    margin-top: 0;
    font-family: VREGULAR, Vonnes, helvetica, arial, sans-serif;
    font-size: 1.1em;
    background-color: #efebe8; /* FOR ALL PAGES - JUST HOME ?? */
}

a {
    color: black;
    text-decoration: none;
    border: none;
    outline: none;
}

input::-moz-focus-inner { 
    border: 0; 
}

a:hover {

}

b, strong {
    font-weight: bold;
}

.clear {
    clear: both;
}

.hide {
    display: none;
}

.page {
    padding: 120px 0 200px 0;
/*    min-height: 100%;*/
    width: 95%;
    margin: 0 auto;
}

p, h3 {
    line-height: 1.5;
    margin-bottom: 12px;
    text-align: justify;
}

h3 {
    letter-spacing: 0.2em;
}

h4 {
/*    border: 1px solid red;*/
    display: block;
    width: 100%;
    font-family: VBLACK, Vonnes, helvetica, arial, sans-serif;   
    font-weight: bold;
    font-size: 1.4em;
    text-transform: uppercase;
    text-align: justify;
    letter-spacing: 0.4em;  
}

td {
    letter-spacing: 0.2em;
    line-height: 1.3;    
}

h1 {
    text-transform: uppercase;
    margin-bottom: 8px;
    font-family: VBLACK, Vonnes, helvetica, arial, sans-serif;
    letter-spacing: 0.4em;
    line-height: 1.4;
}

h2 {
    text-transform: uppercase;
    margin-bottom: 12px;
    letter-spacing: 0.4em;
    line-height: 1.4;
}

li {
    margin-bottom: 4px;
}

label {
    display: block;
    margin-bottom: 4px;
}

.wrap {
    text-align: justify;
    -moz-text-align-last: justify;
         text-align-last: justify;
}

.wrap:after {
   content: "";
   display: inline-block;
   width: 100%;
}

/*.stretch_it {
    white-space: nowrap;
}*/

/************************************************
    NAV
************************************************/

#nav {
/*    border: 1px solid green;*/
 /*   overflow: hidden;*/
    font-family: Vonnes, helvetica, arial, sans-serif;
    height: auto;
    position: fixed;
    z-index: 999;
    top: 12px;
    width: 96%;
    left: 2%;
    padding-bottom: 8px;
    font-size: 4em;
    font-size: 6.5vw;
    font-weight: bold;
    text-transform: lowercase;
    letter-spacing: 0.1em;
/*    display: none;*/
}

.liH {
    height: 100%;
}

#nav_home {
    font-family: CPR, VBLACK, Vonnes, helvetica, arial, sans-serif;   
    font-weight: normal;
}

#nav_home, .nav_collection_2 {
    text-transform: uppercase;    
}

#nav_dropdown {
/*    border: 1px solid orange;*/
    height: auto;
/*    height: 100vh !important;*/
    -webkit-transition: height 1s;
    transition: height 1s;
    display: block;
    overflow: hidden;
}

#nav_dropdown.dropdown_hide {
    height: 0px;    
}
/* ... */

